--- a/client/index.css
+++ b/client/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Jost:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
 :root {
   --color-grey-0: #fff;
   --color-grey-50: #f9fafb;
@@ -46,7 +44,7 @@ html {
 
 body {
   min-height: 100dvh;
-  font-family: 'Cabin', sans-serif;
+  font-family: sans-serif;
   font-weight: 300;
   line-height: 1.8;
   color: var(--color-grey-800);
@@ -55,13 +53,100 @@ body {
   background-color: var(--color-grey-50);
 }
 
-.d-flex-column {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+nav {
+  width: 100%;
+  height: 5rem;
+  padding: 2rem 5rem;
+  border-bottom: 1px solid transparent;
+  background-color: var(--color-blue-400);
+  color: white;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+main {
+  height: calc(100dvh - 10rem);
+  min-width: 20rem;
+  padding: 0 4rem;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--color-blue-400);
+  border-radius: 3px;
+  color: white;
+  font-size: inherit;
+  background-color: var(--color-blue-400);
+
+  &:hover {
+    cursor: pointer;
+    background-color: var(--color-blue-200);
   }
+}
+
+footer {
+  width: 100%;
+  height: 5rem;
+  padding: 1.5rem 2rem;
+  color: white;
+  font-size: 13px;
+  background-color: var(--color-blue-800);
+}
+
+.logo img {
+  height: 5rem;
+}
+
+.title {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.buttons button {
+  border: none;
+  color: white;
+  font-size: inherit;
+  background-color: var(--color-blue-400);
+
+  &:hover {
+    cursor: pointer;
+    color: var(--color-blue-100);
+  }
+}
+
+.home-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-image {
+  width: 30rem;
+  aspect-ratio: 1;
+
+  & img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+}
+
+.signup-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.d-flex-column {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 
 .pass {
-    font-size: small;
+  font-size: small;
 }
