--- a/client/assets/index.css
+++ b/client/assets/index.css
@@ -67,7 +67,7 @@ nav {
 }
 
 main {
-  height: calc(100dvh - 10rem);
+  min-height: calc(100dvh - 10rem);
   min-width: 20rem;
   padding: 0 4rem;
 }
@@ -140,13 +140,32 @@ footer {
   gap: 1.5rem;
 }
 
-.d-flex-column {
+form {
+  width: 30%;
+  min-width: 10rem;
+  margin: 0 auto;
+
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
 }
 
-.pass {
-  font-size: small;
+form button {
+  min-width: 8rem;
+  align-self: center;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1rem;
+}
+
+.form-control input {
+  min-width: 10rem;
+  height: 2rem;
+  padding: 1rem 0.5rem;
+  font-size: 1rem;
+  color: var(--color-grey-600);
+  border: 1px solid var(--color-grey-400);
+  border-radius: 3px;
 }
