--- a/client/assets/index.css
+++ b/client/assets/index.css
@@ -79,11 +79,11 @@ button {
   color: white;
   font-size: inherit;
   background-color: var(--color-blue-400);
+}
 
-  &:hover {
-    cursor: pointer;
-    background-color: var(--color-blue-200);
-  }
+button:hover {
+  cursor: pointer;
+  background-color: var(--color-blue-200);
 }
 
 footer {
@@ -109,11 +109,11 @@ footer {
   color: white;
   font-size: inherit;
   background-color: var(--color-blue-400);
+}
 
-  &:hover {
-    cursor: pointer;
-    color: var(--color-blue-100);
-  }
+.buttons button:hover {
+  cursor: pointer;
+  color: var(--color-blue-100);
 }
 
 .home-content {
@@ -125,12 +125,12 @@ footer {
 .home-image {
   width: 30rem;
   aspect-ratio: 1;
+}
 
-  & img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-  }
+.home-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 .signup-content {
@@ -138,6 +138,7 @@ footer {
   flex-direction: column;
   align-items: center;
   gap: 1.5rem;
+  padding-bottom: 4rem;
 }
 
 form {
