--- a/client/assets/dashboard.css
+++ b/client/assets/dashboard.css
@@ -34,8 +34,9 @@
 }
 
 .profile img {
-  width: 150px;
-  height: 150px;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
 }
 
 .profileBody {
